editor.css
.body {
  display: grid;
  grid-template-columns: auto 20rem;
  grid-template-areas: 'main sidebar';
  height: 100vh;
}

dark-mode-toggle {
  right: 20rem;
}

.scrim {
  display: none;
  z-index: 5;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.5);
}

.viewer {
  align-self: center;
  overflow-y: auto;
}
.layers {
  overflow-x: hidden;
  overflow-y: auto;
  background-color: #eee;
  z-index: 5;
}
.dark .layers {
  background-color: #444;
}
.editor__preview {
  background: #448aff;
}

.button--secondary {
  color: inherit;
  background: transparent !important;
  border-color: currentColor;
}
.button--secondary:hover,
input:focus + label.button--secondary,
input.focus + label.button--secondary {
  background: hsl(43, 100%, 55.7%);
}
.button--secondary:active {
  background: hsl(43.4, 100%, 70.2%);
}

.layers__list {
  padding: 0;
}
.layer {
  display: block;
}
.layer__preview-button {
  display: grid;
  grid-template-columns: min-content 64px auto;
  grid-template-rows: 64px;
  grid-template-areas: 'radio preview name';
  width: 100%;

  align-items: center;
  grid-gap: 0.5rem;
  font: inherit;
  color: inherit;
  border: 0;
  background: transparent;
  padding: 0.5rem;
}

.layer__radio {
  grid-area: radio;
}
.layer__preview {
  grid-area: preview;
  display: block;
  height: 100%;
  width: 100%;
  background-image: linear-gradient(
      45deg,
      rgba(0, 0, 0, 0.2) 25%,
      transparent 25%
    ),
    linear-gradient(-45deg, rgba(0, 0, 0, 0.2) 25%, transparent 25%),
    linear-gradient(45deg, transparent 75%, rgba(0, 0, 0, 0.2) 75%),
    linear-gradient(-45deg, transparent 75%, rgba(0, 0, 0, 0.2) 75%);
  background-size: 16px 16px;
  background-position: 0 0, 0 8px, 8px -8px, -8px 0px;
}
.layer__name {
  grid-area: name;
  align-self: center;

  font: inherit;
  color: inherit;
  border: 0;
  padding: 0;
  background: transparent;
  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
}

.options {
  padding: 0.5rem;

  text-align: left;
  border-top: 1px solid rgba(0, 0, 0, 0.5);
}
.control {
  display: grid;
  grid-template-columns: auto 5rem;
  grid-template-rows: min-content;
  grid-template-areas:
    'label label'
    'input preview';
  grid-gap: 0.25rem;
}

.control, .control--radio {
  border: 0;
  padding: 0;
  margin: 0;
  margin-bottom: 0.5rem;
}
.control__label {
  grid-area: label;
}
.control__input {
  grid-area: input;
}
.control__input:disabled,
.layer__name:disabled,
.control--radio:disabled label,
.button--secondary:disabled {
  opacity: 0.5;
}
.control__preview {
  grid-area: preview;
}

.small {
  display: none;
}

@media (max-width: 40rem) {
  dark-mode-toggle {
    right: 0;
  }
  .body {
    display: block;
  }
  .layers {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 1);

    transform: translateX(-100%);
    transition: transform 0.1s ease;
  }
  .open .layers {
    transform: translateX(0);
  }
  .open .scrim {
    display: block;
  }
  .small {
    display: inline;
  }
}

